--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "main": "index.js",
     "scripts": {
         "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
-        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+        "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+        "start": "node",
+        "server": "nodemon"
+
     },
     "repository": {
         "type": "git",
@@ -14,6 +17,7 @@
         "express": "4.18.1",
         "helmet": "5.0.2",
         "knex": "2.0.0",
+        "nodemon": "^3.0.1",
         "sqlite3": "5.0.8"
     },
     "devDependencies": {
